--- a/randomizer_2/style.css
+++ b/randomizer_2/style.css
@@ -2,28 +2,42 @@ html, body {
   margin: 0;
   padding: 0;
 }
+
 canvas {
   display: block;
   margin: 0 auto;
 }
 
-.navy {
-  color: navy;
+h1 {
+  margin: 15px auto;
+  text-align: center;
+  font-size: 60px;
 }
 
-#firstp {
+h2 {
+  margin: -30px auto 10px auto;
+  text-align: center;
+  letter-spacing: 15px;
+}
 
+.row {
+  display: flex;
+}
+
+.column {
+  flex: 50%;
+  padding: 10px;
 
 }
 
 .one {
-  display: inline-block;
-
+  background-color: orange;
+  max-width: 400px;
+  margin-left: auto;
 }
 
 .two {
   background-color: orange;
   max-width: 400px;
-  margin: 50;
-
+  margin-right: auto;
 }
