--- a/randomizer_2/style.css
+++ b/randomizer_2/style.css
@@ -1,6 +1,8 @@
 html, body {
   margin: 0;
   padding: 0;
+  background-image: url('backgroundimage.jpg');
+
 }
 
 canvas {
@@ -9,15 +11,25 @@ canvas {
 }
 
 h1 {
+  padding-top: 5px;
   margin: 15px auto;
   text-align: center;
   font-size: 60px;
+}
+
+.whitebg {
+  background-color: white;
+  width: 1000px;
+  height: 380px;
+  margin: 0 auto;
 }
 
 h2 {
   margin: -30px auto 10px auto;
   text-align: center;
   letter-spacing: 15px;
+  background-color: white;
+  padding-bottom: 15px;
 }
 
 .row {
@@ -34,10 +46,12 @@ h2 {
   background-color: orange;
   max-width: 400px;
   margin-left: auto;
+  margin-bottom: 15px;
 }
 
 .two {
   background-color: orange;
   max-width: 400px;
   margin-right: auto;
+  margin-bottom: 15px;
 }
