--- a/randomizer_3/style.css
+++ b/randomizer_3/style.css
@@ -1,8 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@900&display=swap');
+@font-face {
+  font-family: 'Peddana';
+  src: url('Peddana-Regular.ttf');
+}
+
 html, body {
   margin: 0;
   padding: 0;
   background-image: url('backgroundimage.jpg');
-
+  font-family: 'Peddana';
 }
 
 canvas {
@@ -11,25 +17,32 @@ canvas {
 }
 
 h1 {
-  padding-top: 5px;
+  /* padding-top: 5px; */
   margin: 15px auto;
   text-align: center;
   font-size: 60px;
+  font-family: 'Noto Serif TC', serif;
+}
+
+p {
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 20px;
 }
 
 .whitebg {
   background-color: white;
   width: 1000px;
-  height: 350px;
+  height: 370px;
   margin: 0 auto;
 }
 
 h2 {
-  margin: -30px auto 10px auto;
+  margin: -15px auto 10px auto;
   text-align: center;
   letter-spacing: 15px;
   background-color: white;
-  padding-bottom: 5px;
+  padding-bottom: 25px;
 }
 
 .row {
@@ -47,6 +60,7 @@ h2 {
   max-width: 400px;
   margin-left: auto;
   margin-bottom: 15px;
+  margin-top: -35px;
 }
 
 .two {
@@ -54,6 +68,7 @@ h2 {
   max-width: 400px;
   margin-right: auto;
   margin-bottom: 15px;
+  margin-top: -35px;
 }
 
 #randomizerButton {
